--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.4",
   "description": "Generate HEX colors for a given namespace.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "mocha test.js"
   },
@@ -26,12 +27,12 @@
     "url": "https://github.com/3rd-Eden/colorspace"
   },
   "dependencies": {
-    "color": "^3.1.3",
+    "color": "^5.0.2",
     "text-hex": "1.0.x"
   },
   "devDependencies": {
-    "assume": "2.1.x",
-    "mocha": "5.2.x",
+    "assume": "2.3.x",
+    "mocha": "11.7.x",
     "pre-commit": "1.2.x"
   }
 }
