--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "space",
     "colorspace"
   ],
-  "author": "so-ric",
+  "author": "Arnout Kazemier",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/so-ric/colorspace/issues"
