--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@so-ric/colorspace",
   "version": "1.1.6",
- "description": "Generate HEX colors for a given namespace using color v5",
+  "description": "Generate HEX colors for a given namespace using color v5",
   "main": "dist/index.cjs.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c rollup.config.js && rm dist/index_tmp.cjs.js && cp dist/index.cjs.js dist/index.cjs",
     "prepare": "npm run build",
     "test": "mocha test.js"
   },
@@ -36,10 +36,14 @@
     "mocha": "11.7.x",
     "pre-commit": "1.2.x",
     "rollup": "^3.0.0",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.0",
+    "babel-plugin-transform-object-hasown": "^1.1.0",
     "rimraf": "^5.0.0"
-  }
+  },
+  "type": "module"
 }
